--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "online_shop_be",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NaDo2383/onlineshop-be.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NaDo2383/onlineshop-be/issues"
+  },
+  "homepage": "https://github.com/NaDo2383/onlineshop-be#readme",
+  "description": ""
 }
